--- a/calc.html
+++ b/calc.html
@@ -58,6 +58,6 @@
                 </td>
             </tr>
         </table>
-        <script src="javascript.js"></script>
+        <script src="calcu.js"></script>
     </body>
 </html
